src/objects/Hospital__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryH</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Schedule_Counter__c</fullName>
        <label>Schedule Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerProcess__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TriggerProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>externalId__c</fullName>
        <externalId>true</externalId>
        <label>externalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paramId__c</fullName>
        <label>paramId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Hospitals</relationshipLabel>
        <relationshipName>Hospitals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Hospital</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Street__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hospital Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>